change groupId and adapt source code root package

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <relativePath />
     </parent>
 
+    <groupId>com.namirial.sign.library</groupId>
     <artifactId>pn-ss-namirial-sign</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>pn-ss-namirial-sign</name>
